Home screen finalized

--- a/POS/smart_pos/src/main/resources/view/MainForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/MainForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
@@ -9,13 +10,13 @@
 
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.MainFormController">
    <children>
-      <ImageView fx:id="imgCargils" fitHeight="119.0" fitWidth="133.0" layoutX="47.0" layoutY="16.0">
+      <ImageView fx:id="imgCargils" fitHeight="78.0" fitWidth="90.0" layoutX="259.0" layoutY="21.0">
          <image>
             <Image url="@../asset/fc_logo.jpg" />
          </image>
       </ImageView>
       <Separator layoutX="48.0" layoutY="140.0" prefHeight="10.0" prefWidth="501.0" />
-      <Label fx:id="lblPOS" layoutX="211.0" layoutY="27.0" prefHeight="21.0" prefWidth="178.0" text="Smart POS System">
+      <Label fx:id="lblPOS" alignment="CENTER" layoutX="46.0" layoutY="114.0" prefHeight="21.0" prefWidth="501.0" text="Smart Point Of Sale System">
          <font>
             <Font name="Ubuntu Bold" size="18.0" />
          </font>
@@ -25,16 +26,43 @@
             <Font name="System Italic" size="13.0" />
          </font>
       </Label>
-      <ImageView fx:id="imgCustomer" fitHeight="104.0" fitWidth="114.0" layoutX="74.0" layoutY="180.0">
-         <image>
-            <Image url="@../asset/customer.png" />
-         </image>
-      </ImageView>
-      <Label fx:id="lblOn" layoutX="213.0" layoutY="60.0" prefHeight="16.0" prefWidth="172.0" text="On your way home" />
-      <Label fx:id="lblWelcome" layoutX="239.0" layoutY="308.0" prefHeight="28.0" prefWidth="123.0" text="WELCOME...!" textFill="#f27b04">
+      <Label fx:id="lblMenu" alignment="CENTER" layoutX="53.0" layoutY="291.0" prefHeight="28.0" prefWidth="501.0" text="WELCOME..!" textFill="#f27b04">
          <font>
             <Font name="Ubuntu Bold Italic" size="18.0" />
          </font>
       </Label>
+      <ImageView fx:id="imgCustomer" fitHeight="90.0" fitWidth="96.0" layoutX="59.0" layoutY="165.0" onMouseEntered="#playMouseEnterAnimation" onMouseExited="#playMouseExitAnimation">
+         <image>
+            <Image url="@../asset/customer.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="imgStock" fitHeight="90.0" fitWidth="90.0" layoutX="191.0" layoutY="165.0" onMouseEntered="#playMouseEnterAnimation" onMouseExited="#playMouseExitAnimation" preserveRatio="true">
+         <image>
+            <Image url="@../asset/items.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="imgSearch" fitHeight="90.0" fitWidth="90.0" layoutX="448.0" layoutY="165.0" onMouseEntered="#playMouseEnterAnimation" onMouseExited="#playMouseExitAnimation">
+         <image>
+            <Image url="@../asset/search.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="imgOrder" fitHeight="90.0" fitWidth="90.0" layoutX="323.0" layoutY="165.0" onMouseEntered="#playMouseEnterAnimation" onMouseExited="#playMouseExitAnimation">
+         <image>
+            <Image url="@../asset/orders.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <Label fx:id="lblDescription" alignment="CENTER" layoutX="97.0" layoutY="322.0" prefHeight="16.0" prefWidth="403.0" text="Please select one of above Otion to proceed" />
    </children>
 </AnchorPane>
