--- a/POS/smart_pos/src/main/resources/view/ManageOrderForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/ManageOrderForm.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.dep11.ManageOrderFormController"
+            fx:controller="lk.ijse.dep11.controller.ManageOrderFormController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
