--- a/POS/smart_pos/src/main/resources/view/ManageCustomerForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/ManageCustomerForm.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="694.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageCustomerFormController">
+<AnchorPane fx:id="root" prefHeight="694.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageCustomerFormController">
    <children>
       <Button fx:id="btnNewCustomer" layoutX="448.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNewCustomerOnAction" text="+New Customer" />
       <Label layoutX="61.0" layoutY="74.0" text="Customer ID:" />
