--- a/POS/smart_pos/src/main/resources/view/ManageItemForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/ManageItemForm.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageItemFormController">
-
+   <children>
+      <ImageView fx:id="imgHome" fitHeight="37.0" fitWidth="39.0" layoutX="14.0" layoutY="14.0" onMouseClicked="#navigateToHome">
+         <image>
+            <Image url="@../asset/home-icon.png" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
