--- a/POS/smart_pos/src/main/resources/view/ManageItemForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/ManageItemForm.fxml
@@ -1,16 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageItemFormController">
+<AnchorPane fx:id="root" prefHeight="732.0" prefWidth="600.0" styleClass="background" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageItemFormController">
    <children>
-      <ImageView fx:id="imgHome" fitHeight="37.0" fitWidth="39.0" layoutX="14.0" layoutY="14.0" onMouseClicked="#navigateToHome">
+      <ImageView fx:id="imgHome" fitHeight="56.0" fitWidth="58.0" layoutX="20.0" layoutY="24.0" onMouseClicked="#navigateToHome">
          <image>
             <Image url="@../asset/home-icon.png" />
          </image>
       </ImageView>
+      <Label layoutX="100.0" layoutY="34.0" text="MANAGE ITEMS">
+         <font>
+            <Font name="Ubuntu Bold" size="22.0" />
+         </font>
+      </Label>
+      <VBox layoutX="50.0" layoutY="100.0" prefHeight="279.0" prefWidth="497.0" spacing="10.0">
+         <children>
+            <Label text="Item Code:">
+               <font>
+                  <Font name="Ubuntu" size="16.0" />
+               </font>
+            </Label>
+            <TextField />
+            <Label text="Label:">
+               <font>
+                  <Font name="Ubuntu" size="16.0" />
+               </font>
+            </Label>
+            <TextField />
+            <Label text="Qty. on Hand:">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField />
+            <Label text="Unit Price:">
+               <font>
+                  <Font name="Ubuntu" size="16.0" />
+               </font>
+            </Label>
+            <TextField />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+               <children>
+                  <Button mnemonicParsing="false" style="-fx-background-color: limegreen;" text="SAVE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: yellow;" text="DELETE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <Button layoutX="456.0" layoutY="36.0" mnemonicParsing="false" style="-fx-background-color: blue;" text="+NEW ITEM" textFill="WHITE">
+         <font>
+            <Font name="Ubuntu Bold" size="13.0" />
+         </font>
+      </Button>
+      <TableView layoutX="63.0" layoutY="410.0" prefHeight="286.0" prefWidth="484.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Code" />
+          <TableColumn prefWidth="182.0" text="Description" />
+            <TableColumn prefWidth="108.0" text="Qty. on Hand" />
+            <TableColumn prefWidth="118.0" text="Unit Price" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
