--- a/POS/smart_pos/src/main/resources/view/ManageCustomerForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/ManageCustomerForm.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,29 +9,57 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="home" fx:id="root" prefHeight="694.0" prefWidth="630.0" style="-fx-background-color: lightblue;" styleClass="imgHome" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.ManageCustomerFormController">
    <children>
-      <Button fx:id="btnNewCustomer" layoutX="448.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNewCustomerOnAction" style="-fx-background-color: blue;" text="+New Customer">
-         <font>
-            <Font name="Ubuntu Bold" size="14.0" />
-         </font></Button>
+      <VBox prefHeight="200.0" prefWidth="630.0">
+         <children>
+            <HBox prefHeight="95.0" prefWidth="197.0" spacing="400.0">
+               <children>
+                  <ImageView id="home" fx:id="imgHome" fitHeight="55.0" fitWidth="59.0" onMouseClicked="#navigateToHome" style="-fx-effect: glow;" styleClass="imgHome">
+                     <image>
+                        <Image url="@../asset/home-icon.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Button fx:id="btnNewCustomer" mnemonicParsing="false" onAction="#btnNewCustomerOnAction" style="-fx-background-color: blue;" text="+New Customer">
+                     <font>
+                        <Font name="Ubuntu Bold" size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
       <Label layoutX="61.0" layoutY="74.0" text="Customer ID:">
          <font>
             <Font name="Ubuntu Bold" size="14.0" />
-         </font></Label>
+         </font>
+      </Label>
       <Label layoutX="61.0" layoutY="138.0" text="Customer Name:">
          <font>
             <Font name="Ubuntu Bold" size="14.0" />
-         </font></Label>
+         </font>
+      </Label>
       <TextField fx:id="txtCustomerId" layoutX="62.0" layoutY="99.0" prefHeight="24.0" prefWidth="508.0" />
       <TextField fx:id="txtName" layoutX="62.0" layoutY="168.0" prefHeight="24.0" prefWidth="508.0" />
       <TextField fx:id="txtAddress" layoutX="62.0" layoutY="228.0" prefHeight="24.0" prefWidth="508.0" />
       <Label layoutX="61.0" layoutY="203.0" text="Customer Address:">
          <font>
             <Font name="Ubuntu Bold" size="14.0" />
-         </font></Label>
+         </font>
+      </Label>
       <Button fx:id="btnSave" layoutX="232.0" layoutY="266.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="24.0" prefWidth="74.0" style="-fx-background-color: lime;" text="SAVE" />
       <Button fx:id="btnDelete" layoutX="333.0" layoutY="266.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: orange;" text="DELETE" />
       <TableView fx:id="tblCustomers" layoutX="62.0" layoutY="321.0" prefHeight="336.0" prefWidth="508.0">
@@ -40,11 +69,6 @@
             <TableColumn prefWidth="209.0" text="CUSTOMER ADDRESS" />
         </columns>
       </TableView>
-      <ImageView id="home" fx:id="imgHome" fitHeight="55.0" fitWidth="59.0" layoutX="19.0" layoutY="14.0" onMouseClicked="#navigateToHome" style="-fx-effect: glow;" styleClass="imgHome">
-         <image>
-            <Image url="@../asset/home-icon.png" />
-         </image>
-      </ImageView>
       <Label layoutX="84.0" layoutY="29.0" text="Home">
          <font>
             <Font name="Ubuntu Bold" size="13.0" />
