--- a/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
@@ -38,33 +38,23 @@
             <Font name="Ubuntu Bold" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="571.0" layoutY="90.0" prefHeight="19.0" prefWidth="86.0" text="ORDER ID:">
+      <Label fx:id="lblOrderId" layoutX="571.0" layoutY="90.0" prefHeight="19.0" prefWidth="171.0" text="ORDER ID: OD001">
          <font>
             <Font name="Ubuntu Bold" size="16.0" />
          </font>
       </Label>
-      <Label fx:id="lblOrderId" layoutX="666.0" layoutY="89.0" prefHeight="20.0" prefWidth="101.0">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblDate" layoutX="639.0" layoutY="120.0" prefHeight="20.0" prefWidth="128.0">
-         <font>
-            <Font name="Ubuntu" size="18.0" />
-         </font>
-      </Label>
       <Label layoutX="27.0" layoutY="171.0" prefHeight="16.0" prefWidth="94.0" text="Customer ID:" />
       <Label layoutX="234.0" layoutY="171.0" prefHeight="16.0" prefWidth="138.0" text="Customer Name:" />
-      <ComboBox layoutX="27.0" layoutY="201.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbCustomerId" layoutX="27.0" layoutY="201.0" prefWidth="150.0" />
       <Label layoutX="27.0" layoutY="251.0" prefHeight="16.0" prefWidth="109.0" text="Item Code:" />
-      <ComboBox layoutX="27.0" layoutY="280.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbItemCode" layoutX="27.0" layoutY="280.0" prefWidth="150.0" />
       <TextField fx:id="txtName" layoutX="234.0" layoutY="201.0" prefHeight="24.0" prefWidth="529.0" promptText="Enter the customer name" />
       <TextField fx:id="txtDescription" layoutX="234.0" layoutY="280.0" prefHeight="24.0" prefWidth="529.0" promptText="Enter the item description" />
       <Label layoutX="234.0" layoutY="251.0" prefHeight="16.0" prefWidth="138.0" text="Item Description:" />
       <Label layoutX="27.0" layoutY="325.0" prefHeight="16.0" prefWidth="109.0" text="Qty. on Hand" />
-      <TextField fx:id="txtQtyInHand" layoutX="27.0" layoutY="359.0" prefHeight="24.0" prefWidth="150.0" />
+      <TextField fx:id="txtQtyOnHand" layoutX="27.0" layoutY="359.0" prefHeight="24.0" prefWidth="150.0" />
       <Label layoutX="234.0" layoutY="325.0" prefHeight="16.0" prefWidth="109.0" text="Unit Price:" />
-      <TextField fx:id="txtPrice" layoutX="234.0" layoutY="359.0" prefHeight="24.0" prefWidth="201.0" />
+      <TextField fx:id="txtUnitPrice" layoutX="234.0" layoutY="359.0" prefHeight="24.0" prefWidth="201.0" />
       <Label layoutX="468.0" layoutY="325.0" prefHeight="16.0" prefWidth="109.0" text="Qty." />
       <TextField fx:id="txtQty" layoutX="468.0" layoutY="359.0" prefHeight="24.0" prefWidth="150.0" />
       <Button fx:id="btnAdd" layoutX="657.0" layoutY="333.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="35.0" prefWidth="101.0" style="-fx-background-color: limegreen;" text="ADD">
@@ -81,14 +71,9 @@
             <TableColumn prefWidth="126.0" text="Delete" />
         </columns>
       </TableView>
-      <Label layoutX="27.0" layoutY="657.0" prefHeight="16.0" prefWidth="52.0" text="Total:">
+      <Label fx:id="lblTotal" layoutX="42.0" layoutY="657.0" prefHeight="29.0" prefWidth="138.0" text="Total:  0.00">
          <font>
-            <Font name="Ubuntu Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="txtTotal" layoutX="95.0" layoutY="657.0" prefHeight="16.0" prefWidth="128.0">
-         <font>
-            <Font size="18.0" />
+            <Font name="Ubuntu Bold" size="24.0" />
          </font>
       </Label>
       <Button fx:id="btnOrder" layoutX="649.0" layoutY="656.0" mnemonicParsing="false" onAction="#btnOrderOnAction" prefHeight="24.0" prefWidth="109.0" style="-fx-background-color: orange;" text="Place Order">
@@ -96,5 +81,10 @@
             <Font name="Ubuntu Bold" size="14.0" />
          </font>
       </Button>
+      <Label fx:id="lblDate" layoutX="570.0" layoutY="112.0" prefHeight="19.0" prefWidth="171.0" text="DATE:  2023-11-27">
+         <font>
+            <Font name="Ubuntu Bold" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
