--- a/POS/smart_pos/src/main/resources/view/MainForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/MainForm.fxml
@@ -10,13 +10,13 @@
 
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.MainFormController">
    <children>
-      <ImageView fx:id="imgCargils" fitHeight="78.0" fitWidth="90.0" layoutX="259.0" layoutY="21.0">
+      <ImageView fx:id="imgCargils" fitHeight="78.0" fitWidth="90.0" layoutX="244.0" layoutY="23.0">
          <image>
             <Image url="@../asset/fc_logo.jpg" />
          </image>
       </ImageView>
       <Separator layoutX="48.0" layoutY="140.0" prefHeight="10.0" prefWidth="501.0" />
-      <Label fx:id="lblPOS" alignment="CENTER" layoutX="46.0" layoutY="114.0" prefHeight="21.0" prefWidth="501.0" text="Smart Point Of Sale System">
+      <Label fx:id="lblPOS" alignment="CENTER" layoutX="46.0" layoutY="114.0" prefHeight="21.0" prefWidth="501.0" text="Fast Lane POS">
          <font>
             <Font name="Ubuntu Bold" size="18.0" />
          </font>
