--- a/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
@@ -64,11 +64,12 @@
       </Button>
       <TableView fx:id="tblOrder" layoutX="57.0" layoutY="429.0" prefHeight="213.0" prefWidth="687.0">
         <columns>
-          <TableColumn prefWidth="99.0" text="Code" />
-          <TableColumn prefWidth="213.0" text="Description" />
-            <TableColumn prefWidth="109.0" text="Qty" />
-            <TableColumn minWidth="0.0" prefWidth="122.0" text="Unit Price" />
-            <TableColumn prefWidth="126.0" text="Delete" />
+          <TableColumn prefWidth="79.0" text="Code" />
+          <TableColumn prefWidth="151.0" text="Description" />
+            <TableColumn prefWidth="126.0" text="Qty" />
+            <TableColumn minWidth="0.0" prefWidth="115.0" text="Unit Price" />
+            <TableColumn prefWidth="129.0" text="Total" />
+            <TableColumn prefWidth="85.0" text="Delete" />
         </columns>
       </TableView>
       <Label fx:id="lblTotal" layoutX="42.0" layoutY="657.0" prefHeight="29.0" prefWidth="138.0" text="Total:  0.00">
