--- a/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/PlaceOrderForm.fxml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.MotionBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="693.0" prefWidth="797.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.PlaceOrderFormController">
    <children>
-      <VBox layoutX="-1.0" layoutY="-4.0" prefHeight="700.0" prefWidth="800.0">
-         <children>
-            <Label prefHeight="147.0" prefWidth="800.0" style="-fx-background-color: lightblue;">
-               <cursor>
-                  <Cursor fx:constant="CROSSHAIR" />
-               </cursor>
-               <effect>
-                  <MotionBlur angle="300.0" />
-               </effect>
-            </Label>
-         </children>
-      </VBox>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="696.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" width="800.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5590277910232544" green="0.7392756938934326" blue="0.9078947305679321" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <VBox layoutX="-1.0" layoutY="-4.0" prefHeight="700.0" prefWidth="800.0" />
       <ImageView fx:id="imgHome" fitHeight="70.0" fitWidth="68.0" layoutX="27.0" layoutY="28.0" onMouseClicked="#navigateToHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../asset/home-icon.png" />
