finalize the functionality of POS

--- a/POS/smart_pos/src/main/resources/view/SearchOrderForm.fxml
+++ b/POS/smart_pos/src/main/resources/view/SearchOrderForm.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="root" prefHeight="635.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.controller.SearchOrderFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="645.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="703.0">
@@ -35,7 +34,7 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="24.0" layoutY="24.0">
+      <ImageView fx:id="imgHome" fitHeight="56.0" fitWidth="56.0" layoutX="24.0" layoutY="24.0" onMouseClicked="#navigateToHome">
          <image>
             <Image url="@../asset/home-icon.png" />
          </image>
@@ -48,7 +47,7 @@
             <Font name="Ubuntu" size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="20.0" layoutY="167.0" prefHeight="446.0" prefWidth="661.0">
+      <TableView fx:id="tblOrders" layoutX="20.0" layoutY="167.0" prefHeight="446.0" prefWidth="661.0">
         <columns>
           <TableColumn prefWidth="109.0" text="Orde ID" />
           <TableColumn prefWidth="118.0" text="Order Date" />
@@ -58,7 +57,7 @@
         </columns>
       </TableView>
       <Label layoutX="24.0" layoutY="93.0" prefHeight="16.0" prefWidth="183.0" text="Enter something to search" />
-      <TextField layoutX="20.0" layoutY="123.0" prefHeight="24.0" prefWidth="661.0" promptText="Eg.Janaka Daskon, C001,ect." />
+      <TextField fx:id="txtSearch" layoutX="20.0" layoutY="123.0" prefHeight="24.0" prefWidth="661.0" promptText="Eg.Janaka Daskon, C001,ect." />
       <Label layoutX="475.0" layoutY="39.0" prefHeight="30.0" prefWidth="206.0" text="SuperMart POS">
          <font>
             <Font size="24.0" />
